--- a/yew-app/index.html
+++ b/yew-app/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Yew App</title>
+        <title>Mike's 9Ball App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link data-trunk rel="rust" />
         <link data-trunk rel="sass" href="./index.scss" />
